trunk/Archive2/a0/35d0ec106be35d/output
main.cpp: In function 'int main()':
main.cpp:19:18: error: 'receive' is not a member of 'one::two'
     std::cout << one::two::receive(test) << '\n';
                  ^
